--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -65,5 +65,14 @@ services:
     depends_on:
       - postgres
 
+  frontend:
+    build:
+      context: .
+      dockerfile: Dockerfile.frontend
+    environment:
+      REACT_API_URL: "http://localhost:8000"
+    ports:
+      - "3000:3000"
+
 volumes:
   pgdata:
