--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
 pytest==8.1.1
 jupyter==1.0.0
+pandas>=1.3.3
+numpy>=1.21.2
+seaborn>=0.11.2
+matplotlib>=3.4.3
+plotly>=5.21.0
 SQLAlchemy
 psycopg2-binary
 requests
